--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.ant-layout-content {
+  background: #fff;
+}
